[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/StorageRack.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/StorageSection.gd" type="Script" id=2]
[ext_resource path="res://scenes/Warehouse.gd" type="Script" id=3]
[ext_resource path="res://scenes/Robot.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/CameraRig.gd" type="Script" id=5]
[ext_resource path="res://scenes/Lanes.gd" type="Script" id=6]
[ext_resource path="res://scenes/Lane.gd" type="Script" id=7]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.3

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 12, 14 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.329412, 0.215686, 0.156863, 1 )

[sub_resource type="PlaneShape" id=4]

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 12, 7 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.721569, 0.686275, 0.670588, 1 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 14, 7 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 6, 2, 2.5 )

[node name="Warehouse" type="Spatial"]
script = ExtResource( 3 )

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CameraRig" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( -1.62921e-07, -0.544639, 0.838671, 0, 0.838671, 0.544639, -1, 8.8733e-08, -1.36637e-07, 6.5, 5, -1.05898e-06 )

[node name="Tween" type="Tween" parent="CameraRig"]

[node name="Lighting" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="OmniLight" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="OmniLight2" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="OmniLight3" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 5.3 )

[node name="OmniLight4" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 5.3 )

[node name="OmniLight5" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -5.3 )

[node name="OmniLight6" type="OmniLight" parent="Lighting"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -5.3 )

[node name="Floor" type="StaticBody" parent="."]

[node name="Floor" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 4 )

[node name="Walls" type="Spatial" parent="."]

[node name="Wall" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 3.5, 7 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Wall2" type="MeshInstance" parent="Walls"]
transform = Transform( -1.62921e-07, 1, 0, 1.62921e-07, 2.65431e-14, 1, 1, 1.62921e-07, -1.62921e-07, -6, 3.5, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 6 )

[node name="Wall3" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.5, -7 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Wall4" type="MeshInstance" parent="Walls"]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, 6, 3.5, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 6 )

[node name="Sections" type="Spatial" parent="."]

[node name="Section" type="Spatial" parent="Sections"]
script = ExtResource( 2 )

[node name="StorageRow" type="Spatial" parent="Sections/Section"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
script = ExtResource( 2 )

[node name="StorageRack4" parent="Sections/Section/StorageRow" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.26, 0, 0 )

[node name="StorageRack3" parent="Sections/Section/StorageRow" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.755, 0, 0 )

[node name="StorageRack2" parent="Sections/Section/StorageRow" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.755, 0, 0 )

[node name="StorageRack" parent="Sections/Section/StorageRow" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26, 0, 0 )

[node name="StorageRow2" type="Spatial" parent="Sections/Section"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 2.3 )
script = ExtResource( 2 )

[node name="StorageRack4" parent="Sections/Section/StorageRow2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.26, 0, 0 )

[node name="StorageRack3" parent="Sections/Section/StorageRow2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.755, 0, 0 )

[node name="StorageRack2" parent="Sections/Section/StorageRow2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.755, 0, 0 )

[node name="StorageRack" parent="Sections/Section/StorageRow2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26, 0, 0 )

[node name="Section2" type="Spatial" parent="Sections"]
script = ExtResource( 2 )

[node name="StorageRow3" type="Spatial" parent="Sections/Section2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.3 )
script = ExtResource( 2 )

[node name="StorageRack4" parent="Sections/Section2/StorageRow3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.26, 0, 0 )

[node name="StorageRack3" parent="Sections/Section2/StorageRow3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.755, 0, 0 )

[node name="StorageRack2" parent="Sections/Section2/StorageRow3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.755, 0, 0 )

[node name="StorageRack" parent="Sections/Section2/StorageRow3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26, 0, 0 )

[node name="StorageRow4" type="Spatial" parent="Sections/Section2"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -3 )
script = ExtResource( 2 )

[node name="StorageRack4" parent="Sections/Section2/StorageRow4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.26, 0, 0 )

[node name="StorageRack3" parent="Sections/Section2/StorageRow4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.755, 0, 0 )

[node name="StorageRack2" parent="Sections/Section2/StorageRow4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.755, 0, 0 )

[node name="StorageRack" parent="Sections/Section2/StorageRow4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26, 0, 0 )

[node name="Lanes" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="Lane" type="Area" parent="Lanes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.3 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Lanes/Lane"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 8 )

[node name="NavPoints" type="Spatial" parent="Lanes/Lane"]

[node name="NavPoint" type="Position3D" parent="Lanes/Lane/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2, 0, -0.8 )

[node name="NavPoint2" type="Position3D" parent="Lanes/Lane/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2, 0, -0.8 )

[node name="Lane2" type="Area" parent="Lanes"]
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Lanes/Lane2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 8 )

[node name="NavPoints" type="Spatial" parent="Lanes/Lane2"]

[node name="NavPoint" type="Position3D" parent="Lanes/Lane2/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2, 0, 0.8 )

[node name="NavPoint2" type="Position3D" parent="Lanes/Lane2/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2, 0, -0.8 )

[node name="NavPoint3" type="Position3D" parent="Lanes/Lane2/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2, 0, 0.8 )

[node name="NavPoint4" type="Position3D" parent="Lanes/Lane2/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2, 0, -0.8 )

[node name="Lane3" type="Area" parent="Lanes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.3 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Lanes/Lane3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 8 )

[node name="NavPoints" type="Spatial" parent="Lanes/Lane3"]

[node name="NavPoint" type="Position3D" parent="Lanes/Lane3/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2, 0, 0.8 )

[node name="NavPoint2" type="Position3D" parent="Lanes/Lane3/NavPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2, 0, 0.8 )

[node name="Robot" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="Countdown" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="lane_entered" from="Lanes" to="." method="_on_Lane_entered"]
[connection signal="box_placed" from="Robot" to="." method="_on_Robot_box_placed"]
[connection signal="timeout" from="Countdown" to="." method="start_robot"]
